--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
